--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -26,6 +26,7 @@ blocks:
           commands:
             - checkout
             - npm install
+            - ./node_modules/.bin/lerna bootstrap
             - npm run start
 
   - name: "Smoke tests"
